# mcp-command-execution-server

./: .gitignore  CHANGELOG.md  LICENSE  README.md  claude_desktop_config.json  git_connection_test.md  pyproject.toml  requirements.txt  server.py  server_fastmcp.py  server_fastmcp_fixed.py  server_fastmcp_fixed_v2.py  server_fastmcp_fixed_v3_encoding.py
docs/: API_Reference.md  Deployment_Guide.md  Troubleshooting_Guide.md
